# network-scanner

./: .editorconfig  .gitignore  Makefile  config.vapi  in.netroy.network-scanner.yml  meson.build  vala-lint.conf
.github/workflows/: flatpak.yml
data/: gresource.xml  in.netroy.network-scanner.desktop.in  in.netroy.network-scanner.metainfo.xml.in  meson.build
po/: LINGUAS  POTFILES  de.po  hi.po  meson.build  network-scanner.pot
src/: Application.blp  Application.vala  MainWindow.blp  MainWindow.vala  NetworkDevice.vala  NetworkScanner.vala  config.vapi  meson.build
