desktop_file = i18n.merge_file(
  input: 'in.netroy.network-scanner.desktop.in',
  output: 'in.netroy.network-scanner.desktop',
  type: 'desktop',
  po_dir: '../po',
  install: true,
  install_dir: join_paths(get_option('datadir'), 'applications')
)

appstream_file = i18n.merge_file(
  input: 'in.netroy.network-scanner.metainfo.xml.in',
  output: 'in.netroy.network-scanner.metainfo.xml',
  po_dir: '../po',
  install: true,
  install_dir: join_paths(get_option('datadir'), 'metainfo')
)
