i18n.gettext(meson.project_name(),
  args: [
    '--directory=' + meson.source_root(),
    '--from-code=UTF-8',
    '--add-comments',
    '--keyword=_',
    '--keyword=C_:1c,2',
    '--keyword=N_',
    '--keyword=NC_:1c,2',
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),
  ]
)
